--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,39 @@
 ---
+import Layout from "@/layouts/Layout.astro";
+import Navigation from "@/components/sections/Navigation.astro";
+import Hero from "@/components/sections/Hero.astro";
+import About from "@/components/sections/About.astro";
+import Skills from "@/components/sections/Skills.astro";
+import BlogPost from "@/components/sections/BlogPost.astro";
+import Projects from "@/components/sections/Projects.astro";
+import Footer from "@/components/sections/Footer.astro";
 
+import { basics } from "@landing";
+const { name, label } = basics;
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title={`Portafolio de ${name} - ${label}`}>
+  <Navigation />
+  <main>
+    <Hero />
+		<About />
+		<Skills />
+		<BlogPost />
+		<Projects />
+		<Footer />
+  </main>
+</Layout>
+
+<style>
+  main {
+    padding: 4rem;
+    margin: auto;
+    width: 100%;
+  }
+
+  @media (width <= 700px) {
+    main {
+      padding: 2rem;
+    }
+  }
+</style>
