--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,9 +1,26 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import Logo from "@/icons/Logo.astro";
+import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
 const { frontmatter } = Astro.props;
 ---
 
 <Layout title={frontmatter.title}>
+  <header class="body-font">
+    <div
+      class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center"
+    >
+      <a href="/" class="logoText flex items-center mb-4 md:mb-0">
+        <Logo />
+        <!-- <span class="ml-2 text-xl">Edinson Rivera</span> -->
+      </a>
+      <nav
+        class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
+      >
+        <a href="/blog" class="return-btn">Regresar <ArrowReturnLeft /></a>
+      </nav>
+    </div>
+  </header>
   <main>
     <h2>{frontmatter.title}</h2>
     <p>{frontmatter.pubDate.slice(0, 10)}</p>
@@ -18,8 +35,6 @@ const { frontmatter } = Astro.props;
   main {
     max-width: 700px;
     margin: 0 auto 72px;
-    padding: 4rem;
-    margin: auto;
     width: 100%;
   }
 
@@ -32,11 +47,11 @@ const { frontmatter } = Astro.props;
     font-size: 14px;
     line-height: 1.4;
     text-wrap: balance;
-    margin: .5rem 0;
+    margin: 0.5rem 0;
   }
 
-  img{
-    aspect-ratio: 1 / 1; 
+  img {
+    aspect-ratio: 1 / 1;
     object-fit: cover;
     width: 700px;
     height: 350px;
@@ -44,9 +59,40 @@ const { frontmatter } = Astro.props;
     margin-bottom: 16px;
   }
 
+  header {
+    color: rgba(30, 37, 44, 85%);
+    max-width: 700px;
+    margin: 0 auto 0px;
+
+  }
+
+  .logoText {
+    font-family: "Inter Variable", sans-serif;
+    font-weight: 700;
+    font-size: 1.2rem;
+  }
+
+  .return-btn {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    border: 0.0625rem solid rgba(30, 37, 44, 25%);
+    border-radius: 0.125rem;
+    padding-inline: 0.375rem;
+    color: #999;
+  }
+
+  .return-btn:hover {
+    color: #666;
+    border: 0.0625rem solid #666;
+  }
+
   @media (width <= 700px) {
     main {
       padding: 2rem;
+    }
+    header {
+      margin-bottom: 38px;
     }
   }
 </style>
