--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -12,7 +12,7 @@ const { frontmatter } = Astro.props;
     >
       <a href="/" class="logoText flex items-center mb-4 md:mb-0">
         <Logo />
-        <!-- <span class="ml-2 text-xl">Edinson Rivera</span> -->
+        <span class="ml-2 text-xl">Edinson Rivera</span>
       </a>
       <nav
         class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
@@ -62,8 +62,7 @@ const { frontmatter } = Astro.props;
   header {
     color: rgba(30, 37, 44, 85%);
     max-width: 700px;
-    margin: 0 auto 0px;
-
+    margin: 0 auto 72px;
   }
 
   .logoText {
