--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,7 +17,7 @@ const { name, label } = basics;
         <p>Tecnología | Marketing Digital | Cultura</p>
       </div>
       <figure class="title-footer">
-        <img src="/images/Code-typing-bro.svg" alt="hero image" />
+        <img src="/images/Task-bro.svg" alt="hero image" />
       </figure>
     </div>
     <BlogPost />
