--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -106,7 +106,7 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl]
     justify-content: space-between;
     gap: 1rem;
     max-width: 700px;
-    margin: 0px auto;
+    margin: 0 auto;
   }
 
   .info {
@@ -117,7 +117,7 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl]
 
   .info h1 {
     font-size: 1.5rem;
-    font-weight: 800;
+    font-weight: 700;
     text-wrap: pretty;
     
   }
