--- a/src/components/sections/Navigation.astro
+++ b/src/components/sections/Navigation.astro
@@ -6,31 +6,21 @@ import Download from "@/icons/Download.astro";
 
 <Section>
   <header class="body-font">
-    <div
-      class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center"
-    >
+    <div class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center">
       <a href="/" class="logoText flex items-center mb-4 md:mb-0">
         <Logo />
         <!-- <span class="ml-2 text-xl">Edinson Rivera</span> -->
       </a>
-      <nav
-        class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
-      >
-        <a
-          href="/proyectos"
-          
-          class="hover:text-gray-900 hover:underline hover:underline-offset-2"
-          >Proyectos</a
-        >
-        <a
-          href="/blog"
-          
-          class="hover:text-gray-900 hover:underline hover:underline-offset-2"
-          >Blog</a
-        >
-        <a href="/resume" target="_blank" class="resume-btn"
-          >Resume<Download /></a
-        >
+      <nav class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center">
+        <a href="/proyectos" class="hover:text-gray-900 hover:underline hover:underline-offset-2">
+          Proyectos
+        </a>
+        <a href="/blog" class="hover:text-gray-900 hover:underline hover:underline-offset-2">
+          Blog
+        </a>
+        <a href="/resume" target="_blank" class="resume-btn">
+          Resume<Download />
+        </a>
       </nav>
     </div>
   </header>
