--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -13,44 +13,52 @@ const SOCIAL_ICONS: Record<string, any> = {
 ---
 
 <Section>
-  <h2>Sígueme</h2>
-  <footer>
-    <div class="avatar">
-      <img src="../images/avatar.svg" alt=`${name}` class="avatar-img" />
-      <h3>Edinson Rivera Jurado | Desarrollo Web | Community Manager</h3>
-    </div>
+  <main>
+    <h2>Sígueme</h2>
+    <footer>
+      <div class="avatar">
+        <img src="../images/avatar.svg" alt=`${name}` class="avatar-img" />
+        <h3>Edinson Rivera Jurado | Desarrollo Web | Community Manager</h3>
+      </div>
 
-    <div class="copyright">
-      <p>© 2024 Copyright —@edirju</p>
-    </div>
+      <div class="copyright">
+        <p>© 2024 Copyright —@edirju</p>
+      </div>
 
-    <div class="social-icons">
-      {
-        profiles.map(({ network, url, username }) => {
-          const Icon = SOCIAL_ICONS[network];
+      <div class="social-icons">
+        {
+          profiles.map(({ network, url, username }) => {
+            const Icon = SOCIAL_ICONS[network];
 
-          if (!Icon) {
-            console.error(`Icono no encontrado para la red: ${network}`);
-            return null;
-          }
+            if (!Icon) {
+              console.error(`Icono no encontrado para la red: ${network}`);
+              return null;
+            }
 
-          return (
-            <a
-              href={url}
-              title={`Visitar el perfil de ${name} en ${network}`}
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <Icon />
-            </a>
-          );
-        })
-      }
-    </div>
-  </footer>
+            return (
+              <a
+                href={url}
+                title={`Visitar el perfil de ${name} en ${network}`}
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <Icon />
+              </a>
+            );
+          })
+        }
+      </div>
+    </footer>
+  </main>
 </Section>
 
 <style>
+  main {
+    margin: 0 auto 0px;
+    max-width: 700px;
+    
+  }
+
   h2 {
     margin-bottom: 1.5rem;
     font-weight: 800;
@@ -85,7 +93,7 @@ const SOCIAL_ICONS: Record<string, any> = {
     letter-spacing: -0.05em;
   }
 
-  .copyright p{
+  .copyright p {
     font-size: 1rem;
     font-weight: 300;
     letter-spacing: 0.1em;
@@ -97,22 +105,27 @@ const SOCIAL_ICONS: Record<string, any> = {
   }
 
   .social-icons a {
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
   .social-icons a:hover {
-    color: rgba(30, 37, 44,40%);
+    color: rgba(30, 37, 44, 40%);
   }
 
-  @media (width <= 700px){
+  @media (width <= 700px) {
+    main {
+      margin-bottom: 38px;
+      padding: 2rem;
+    }
+
     footer {
-      gap: .5rem;
+      gap: 0.5rem;
     }
 
     .avatar {
       flex-direction: column;
       text-align: center;
     }
-    
+
     .avatar img {
       width: 48px;
       height: 48px;
