--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,17 +1,21 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import MinNav from "@/components/sections/MinNav.astro";
-import BlogPost from "@/components/sections/BlogPost.astro";
+// import BlogPost from "@/components/sections/BlogPost.astro";
 import Footer from "@/components/sections/Footer.astro";
+import { Rss } from "simple-icons-astro";
+import Filetextfill from "@/icons/Filetextfill.astro";
 
 import { basics } from "@landing";
 const { name, label } = basics;
+
+const allPosts = await Astro.glob("@/pages/posts/*.md");
 ---
 
 <Layout title=`Portafolio de ${name} - Blog & Notas`>
   <MinNav />
   <main>
-    <div class="title-container">
+    <!-- <div class="title-container">
       <div class="title-header">
         <h1 class="title-black">Mis publicaciones</h1>
         <p>Tecnología | Marketing Digital | Cultura</p>
@@ -19,62 +23,152 @@ const { name, label } = basics;
       <figure class="title-footer">
         <img src="/images/Task-bro.svg" alt="hero image" />
       </figure>
-    </div>
-    <BlogPost />
-    <Footer />
+    </div> -->
+    <!-- <BlogPost /> -->
+    <h2>Blog & Notas <span>Tecnología | Marketing | Cultura</span></h2>
+    <article>
+      <p>
+        Escribo sobre cualquier cosa relacionada con la tecnología, el marketing
+        y de vez en cuando sobre cosas interesantes que se cruzan en mí camino.
+      </p>
+      <div class="box-left">
+        <a href="#" class="rss-btn">
+          <Rss class="w-3 h-3" />
+          Suscríbete
+        </a>
+      </div>
+    </article>
+
+    <ul>
+      {
+        allPosts.map((post) => (
+          <li>
+            <a href={post.url}>
+              <Filetextfill />
+              <h3>{post.frontmatter.title}</h3>
+            </a>
+            <p>{post.frontmatter.description}</p>
+          </li>
+        ))
+      }
+    </ul>
   </main>
+  <Footer />
 </Layout>
 
 <style>
   main {
-    padding: 4rem;
-    margin: auto;
-    width: 100%;
+    max-width: 700px;
+    padding: 2rem 0;
+    margin: 0 auto 72px;
   }
 
-  .title-container {
-    max-width: 700px;
-    margin: 0 auto 72px;
+  h2 {
+    margin-bottom: 1.5rem;
+    font-weight: 900;
+    line-height: 1.5;
+    letter-spacing: -0.025em;
+    font-size: 24px;
+    text-transform: uppercase;
+    background-color: #1e252c;
+    color: #f8fafb;
+    width: fit-content;
+    padding: 1px 32px 1px 16px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 8px;
   }
 
-  .title-header {
-    text-wrap: pretty;
-  }
-  .title-header p {
+  h2 span {
+    font-weight: 200;
     font-size: 1rem;
-    line-height: 0.7;
-    color: rgba(30, 37, 44, 60%);
-  }
-  .title-black {
-    font-weight: 900;
-    font-size: 3.5rem;
-    letter-spacing: -0.125rem;
+    letter-spacing: 0.05em;
   }
 
-  .title-footer img {
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
-    width: 215px;
+  article {
+    border: 1px solid rgba(30, 37, 44, 10%);
+    padding: 1rem;
+  }
+
+  article p {
+    font-size: 0.75rem;
+    text-wrap: pretty;
+    font-weight: 300;
+    color: rgba(30, 37, 44, 80%);
+  }
+
+  .box-left {
+    display: flex;
+    gap: 0.25rem;
+    justify-content: end;
+    font-size: 0.625rem;
+  }
+  .rss-btn {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    padding: 4px;
+    background: rgba(30, 37, 44, 8%);
+    color: rgb(30, 37, 44, 60%);
+  }
+
+  ul {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  li {
+    width: 100%;
+    height: fit-content;
+    padding: 8px;
+    border: 1px solid transparent;
+    transition: all 0.3s ease-in-out;
+  }
+
+  li:hover {
+    border: 1px solid rgba(30, 37, 44, 15%);
+    background-color: rgba(30, 37, 44, 5%);
+  }
+
+  li a {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+
+  li a h3 {
+    font-size: 16px;
+    font-weight: 600;
+    text-wrap: pretty;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  li p {
+    font-size: 14px;
+    text-wrap: pretty;
+    color: rgba(30, 37, 44, 60%);
+    /*overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;*/
   }
 
   @media (width <= 700px) {
     main {
       padding: 2rem;
     }
-    .title-container {
-      flex-direction: column-reverse;
-      text-align: center;
-      margin-bottom: 72px;
-    }
-    .title-black {
-      font-size: 36px;
-    }
-    .title-header p {
+    h2 {
+      flex-wrap: wrap;
       line-height: 1;
-      font-size: 14px;
+      padding: 4px 32px 4px 16px;
+      letter-spacing: 0.025em;
+    }
+    h2 span {
+      line-height: 1;
+      font-size: 12px;
     }
   }
 </style>
