--- a/src/components/sections/Navigation.astro
+++ b/src/components/sections/Navigation.astro
@@ -6,16 +6,26 @@ import Download from "@/icons/Download.astro";
 
 <Section>
   <header class="body-font">
-    <div class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center">
+    <div
+      class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center"
+    >
       <a href="/" class="logoText flex items-center mb-4 md:mb-0">
         <Logo />
-        <!-- <span class="ml-2 text-xl">Edinson Rivera</span> -->
+        <!-- <span class="ml-2 text-xl">Edinson Rivera</span> hover:underline hover:underline-offset-2 -->
       </a>
-      <nav class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center">
-        <a href="/proyectos" class="hover:text-gray-900 hover:underline hover:underline-offset-2">
+      <nav
+        class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
+      >
+        <a
+          href="/proyectos"
+          class="nav-link hover:text-gray-900 "
+        >
           Proyectos
         </a>
-        <a href="/blog" class="hover:text-gray-900 hover:underline hover:underline-offset-2">
+        <a
+          href="/blog"
+          class="nav-link hover:text-gray-900 "
+        >
           Blog
         </a>
         <a href="/resume" target="_blank" class="resume-btn">
@@ -35,6 +45,31 @@ import Download from "@/icons/Download.astro";
     font-family: "Inter Variable", sans-serif;
     font-weight: 700;
     font-size: 1.2rem;
+  }
+
+  .nav-link {
+    position: relative;
+    transition: .2s;
+  }
+
+  .nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    height: 2px;
+    background-color: var(--color-dark);
+    transform: scaleX(0);
+    transition: .2s;
+    transform-origin: left;
+  }
+  .nav-link:hover {
+    color: var(--color-dark);
+  }
+
+  .nav-link:hover::after {
+    transform: scaleX(1);
   }
 
   .resume-btn {
