--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -77,6 +77,7 @@ const { name, label } = basics;
           )
         }
       </ul>
+      
       <Footer />
     </main>
   </Section>
@@ -84,7 +85,7 @@ const { name, label } = basics;
 
 <style>
   main {
-    padding: 4rem 0rem;
+    padding: 0rem 0rem 2rem;
     margin: auto;
     width: 100%;
   }
@@ -169,7 +170,7 @@ const { name, label } = basics;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 0.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4.5rem;
   }
 
   .item {
