--- a/src/components/sections/MinNav.astro
+++ b/src/components/sections/MinNav.astro
@@ -11,7 +11,7 @@ import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
     >
       <a href="/" class="logoText flex items-center mb-4 md:mb-0">
         <Logo />
-        <!-- <span class="ml-2 text-xl">Edinson Rivera</span> -->
+        <span class="ml-2 text-xl">Edinson Rivera</span>
       </a>
       <nav
         class="md:ml-auto flex flex-wrap gap-5 items-center text-base justify-center"
