--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -39,7 +39,7 @@ const { name, label } = basics;
             ({ url, description, highlights, name, isActive, github }) => {
               return (
                 <li class="items">
-                  <article class="item">
+                  <article class="item" transition:animate="slide">
                     <header>
                       <h3>
                         <a
