update viewtransitions posts

--- a/src/components/sections/Navigation.astro
+++ b/src/components/sections/Navigation.astro
@@ -5,7 +5,7 @@ import Download from "@/icons/Download.astro";
 ---
 
 <Section>
-  <header class="body-font">
+  <header class="body-font" transition:animate="slide">
     <div
       class="container mx-auto flex flex-wrap py-4 flex-col md:flex-row items-center"
     >
