--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -119,9 +119,9 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl, threa
 
   .info h1 {
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: 800;
     text-wrap: pretty;
-    
+    letter-spacing: -.0625rem;
   }
 
   .info h2 {
@@ -142,7 +142,7 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl, threa
   img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    width: 240px;
+    width: 280px;
   }
   footer {
     display: flex;
