--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -247,10 +247,10 @@ const { name, label } = basics;
       flex-wrap: wrap;
       line-height: 0.9;
       padding: 4px 32px 4px 16px;
-      letter-spacing: 0.025em;
+      letter-spacing: -.0825rem;
     }
     .title-section span {
-      letter-spacing: 0.025em;
+      letter-spacing: 0.015em;
       text-wrap: pretty;
       line-height: 1;
       font-size: 12px;
