--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -16,7 +16,7 @@ const { name, label } = basics;
     <main>
       <h2 class="title-section">
         Bodega de Scripts
-        <span>Front-end | Back-end | No-Code</span>
+        <span>Front-end | Back-end </span>
       </h2>
 
       <article class="text-description">
