--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -47,7 +47,10 @@ const SKILL_ICONS: Record<string, any> = {
         <span class="text-blue-400"><Circle /></span>
         <span class="text-yellow-500"><Circle /></span>
       </h3>
-      <p>Presento alguno de mis proyectos destacados y el enfoque que tomé en cada uno de ellos.</p>
+      <p>
+        Presento alguno de mis proyectos destacados y el enfoque que tomé en
+        cada uno de ellos.
+      </p>
     </header>
 
     <ul class="project-container">
@@ -87,7 +90,11 @@ const SKILL_ICONS: Record<string, any> = {
         <span class="text-red-600"><Circle /></span>
         <span class="text-purple-500"><Circle /></span>
       </h3>
-      <p>Algunos de mis proyectos, prácticas que brindan una idea de mi experiencia y habilidades, asi como de la variedad de soluciones que puedo ofrecer.</p>
+      <p>
+        Algunos de mis proyectos, prácticas que brindan una idea de mi
+        experiencia y habilidades, asi como de la variedad de soluciones que
+        puedo ofrecer.
+      </p>
     </header>
     <ul class="project-container">
       {
@@ -104,7 +111,7 @@ const SKILL_ICONS: Record<string, any> = {
                     </a>
                     {isActive && <span>•</span>}
                     {github && (
-                      <a href="">
+                      <a href={github} target="_blank">
                         <Github class="w-4 h-4" />
                       </a>
                     )}
