--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -10,6 +10,7 @@ import {
   React,
   Javascript,
   Python,
+  Vite
 } from "simple-icons-astro";
 import Circle from "@/icons/circle.astro";
 import AstroIcon from "@/icons/AstroIcon.astro";
@@ -20,6 +21,7 @@ const SKILL_ICONS: Record<string, any> = {
   React,
   Javascript,
   AstroIcon,
+  Vite
 };
 ---
 
