--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -118,14 +118,14 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl, threa
   }
 
   .info h1 {
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: 800;
     text-wrap: pretty;
     letter-spacing: -.0625rem;
   }
 
   .info h2 {
-    font-size: .875rem;
+    font-size: 14px;
     font-weight: 500;
     color: rgba(30, 37, 44, 65%);
     text-wrap: balance;
@@ -135,7 +135,7 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl, threa
     display: flex;
     align-items: center;
     gap: 0.25rem;
-    font-size: .875rem;
+    font-size: 14px;
     color: rgba(30, 37, 44, 45%);
   }
 
@@ -144,12 +144,14 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl, threa
     object-fit: cover;
     width: 280px;
   }
+
   footer {
     display: flex;
     gap: 8px;
     margin-top: 8px;
-    font-size: 0.65rem;
+    font-size: 10.4px;
   }
+
   footer a {
     color: #777;
     display: inline-flex;
@@ -167,6 +169,7 @@ const printInfo = [email, phone, linkedUrl, githubUrl, XUrl, instagramUrl, threa
     border: 1px solid #ddd;
     color: #ffc134;
   }
+  
   @media (width <= 700px) {
     .container {
       flex-direction: column-reverse;
