--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -217,7 +217,7 @@ const { name, label } = basics;
     /* display: flex;
     flex-wrap: wrap;
     gap: 0.25rem; */
-    padding: -0.25rem;
+    padding: -4px;
   }
 
   .item footer ul {
