--- a/src/components/resume/Projects.astro
+++ b/src/components/resume/Projects.astro
@@ -88,7 +88,7 @@ import { projects } from "@cv";
   }
 
   article a {
-    font-size: .875rem;
+    font-size: 14px;
     font-weight: 600;
     color: #111;
   }
