--- a/src/components/sections/Navigation.astro
+++ b/src/components/sections/Navigation.astro
@@ -75,16 +75,16 @@ import Download from "@/icons/Download.astro";
   .resume-btn {
     display: flex;
     align-items: center;
-    gap: 0.25rem;
-    border: 0.0625rem solid #ddd;
-    border-radius: 0.125rem;
-    padding-inline: 0.375rem;
+    gap: 4px;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    padding-inline: 6px;
     color: #999;
   }
 
   .resume-btn:hover {
     color: #666;
-    border: 0.0625rem solid #666;
+    border: 1px solid #666;
   }
 
   @media (width <= 700px) {
