--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -148,7 +148,7 @@ const SKILL_ICONS: Record<string, any> = {
   }
 
   .text-description p {
-    font-size: 0.75rem;
+    font-size: 12px;
     text-wrap: pretty;
     font-weight: 300;
     color: rgba(30, 37, 44, 80%);
@@ -158,7 +158,7 @@ const SKILL_ICONS: Record<string, any> = {
     display: flex;
     gap: 0.25rem;
     justify-content: end;
-    font-size: 0.625rem;
+    font-size: 10px;
   }
 
   .rss-btn {
@@ -176,7 +176,7 @@ const SKILL_ICONS: Record<string, any> = {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 12px;
     margin-bottom: 24px;
   }
 
@@ -190,7 +190,7 @@ const SKILL_ICONS: Record<string, any> = {
   }
 
   .projects-item header p {
-    font-size: 0.75rem;
+    font-size: 12px;
     font-weight: 400;
     color: rgba(30, 37, 44, 80%);
   }
@@ -207,7 +207,7 @@ const SKILL_ICONS: Record<string, any> = {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    padding: 0.125rem 0.25rem;
+    padding: 2px 4px;
     width: fit-content;
     height: 100%;
 
