--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/inter";
 import "@fontsource-variable/inconsolata";
+import "@fontsource/source-sans-pro";
 import { ViewTransitions } from "astro:transitions";
 
 interface Props {
@@ -19,95 +20,94 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <ViewTransitions/>
+    <ViewTransitions />
   </head>
   <body>
     <slot />
   </body>
-</html>
+  <style is:global>
+    :root {
+      --bg-white: #f8fafb;
+      --color-dark: #1e252c;
+      --color-secondary: rgb(255, 193, 52);
+      --color-secondary-transparent: rgba(255, 193, 52, 0.5);
+    }
 
-<style is:global>
-  :root {
-    --bg-white: #f8fafb;
-    --color-dark: #1e252c;
-    --color-secondary: rgb(255, 193, 52);
-    --color-secondary-transparent: rgba(255,193,52,.5);
-  }
+    *::selection {
+      background-color: var(--color-secondary);
+    }
 
-  *::selection {
-    background-color: var(--color-secondary);
-  }
+    html {
+      font-family: system-ui, sans-serif;
+      background: var(--bg-white);
+      /* letter-spacing: -0.0063rem; */
+    }
 
-  html {
-    font-family: system-ui, sans-serif;
-    background: var(--bg-white);
-    /* letter-spacing: -0.0063rem; */
-  }
+    body,
+    figure {
+      margin: 0;
+      padding: 0;
+    }
 
-  body,
-  figure {
-    margin: 0;
-    padding: 0;
-  }
+    a {
+      text-decoration: none;
+    }
 
-  a {
-    text-decoration: none;
-  }
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+    }
 
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: "Inter Variable", sans-serif;
+      margin: 0;
+    }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: "Inter Variable", sans-serif;
-    margin: 0;
-  }
+    body {
+      font-family: "Inconsolata Variable", monospace;
+      color: var(--color-dark);
+    }
 
-  body {
-    font-family: "Inconsolata Variable", monospace;
-    color: var(--color-dark);
-  }
-
-  p {
-    color: var(--color-dark);
-    font-size: 0.875rem;
-    line-height: 1.5;
-    margin: 0;
-    text-wrap: pretty;
-  }
-
-  .print {
-    display: none !important;
-  }
-
-  @media print {
-    .no-print {
-      display: none !important;
+    p {
+      color: var(--color-dark);
+      font-size: 0.875rem;
+      line-height: 1.5;
+      margin: 0;
+      text-wrap: pretty;
     }
 
     .print {
-      display: block !important;
-    }
-
-    astro-dev-toolbar {
       display: none !important;
     }
 
-    article {
-      break-inside: avoid;
+    @media print {
+      .no-print {
+        display: none !important;
+      }
+
+      .print {
+        display: block !important;
+      }
+
+      astro-dev-toolbar {
+        display: none !important;
+      }
+
+      article {
+        break-inside: avoid;
+      }
     }
-  }
-</style>
+  </style>
+</html>
