--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -22,6 +22,7 @@ const { frontmatter } = Astro.props;
       </nav>
     </div>
   </header>
+
   <main>
     <h2 transition:animate={slide({ duration: ".5s" })}>{frontmatter.title}</h2>
     <p transition:animate={slide({ duration: ".5s" })}>
@@ -58,7 +59,7 @@ const { frontmatter } = Astro.props;
     font-size: 14px;
     line-height: 1.4;
     text-wrap: balance;
-    margin: 0.5rem 0;
+    margin: 8px 0;
   }
 
   img {
