--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const { name, label } = basics;
 
 <style>
   main {
-    padding: 4rem;
+    padding: 64px;
     margin: auto;
     width: 100%;
   }
