--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -5,20 +5,10 @@ import { basics } from '@landing'
 const { summary } = basics
 ---
 <Section>
-  <h2>Sobre Mí</h2>
+  <h2 class="section-title">Sobre Mí</h2>
   <p>{summary}</p>
 </Section>
 
 <style>
-  h2 {
-    margin-bottom: 1.5rem;
-    font-weight: 800;
-    line-height: 1.5;
-    font-size: 20px;
-    text-transform: uppercase;
-    background-color: #1e252c;
-    color: #f8fafb;
-    width: fit-content;
-    padding: 1px 32px 1px 16px;
-  }
+  
 </style>
