--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -25,15 +25,20 @@ const { name, label } = basics;
 </Layout>
 
 <style>
+  body {
+    font-family: "Inconsolata Variable", monospace;
+  }
   main {
-    padding: 4rem;
+    margin: 64px 0;
+    /* padding: 4rem;
     margin: auto;
-    width: 100%;
+    width: 100%; */
   }
 
   @media (width <= 700px) {
     main {
-      padding: 2rem;
+      margin: 32px 0;
+      /* padding: 2rem; */
     }
   }
 </style>
