--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -15,16 +15,17 @@ const { title } = Astro.props;
   }
 
   h2 {
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
     font-weight: 700;
     font-style: normal;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   @media (width <= 700px) {
     section {
       margin-bottom: 38px;
+      padding: 0 16px;
     }
   }
 </style>
