--- a/src/components/resume/Hero.astro
+++ b/src/components/resume/Hero.astro
@@ -23,10 +23,11 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
 ---
 
 <Section>
-  <div class="container">
-    <div class="info">
+  <div class="hero-container">
+    <div class="hero-info">
       <h1>{name}</h1>
       <h2>{label}</h2>
+
       <span>
         <WorldMap />
         {city}, {region}
@@ -89,15 +90,16 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
 </Section>
 
 <style>
-  .container {
+  .hero-container {
+    /* border: 1px solid rebeccapurple; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: 1rem;
+    gap: 16px;
   }
 
-  .info {
+  .hero-info {
     display: flex;
     flex-direction: column;
   }
@@ -108,17 +110,17 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
   }
 
   h2 {
-    font-family: "Inconsolata Variable", monospace;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 300;
     text-wrap: balance;
-    color: #444;
+    color: rgb(68, 68, 68, 1);
+    font-family: "Inconsolata Variable", monospace;
   }
 
   img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    width: 288px;
+    width: 260px;
     border-radius: 6px;
   }
 
@@ -158,11 +160,11 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
   }
 
   @media (width <= 700px) {
-    .container {
+    .hero-container {
       flex-direction: column-reverse;
     }
 
-    .info {
+    .hero-info {
       justify-content: center;
       align-items: center;
       padding-right: 0;
@@ -173,12 +175,19 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ");
       display: flex;
       justify-content: center;
       align-items: center;
+      margin: 0 auto;
     }
+
     h2 {
       text-wrap: balance;
     }
+
     figure {
       margin: 0 auto;
+    }
+
+    img {
+      width: 175px;
     }
   }
 </style>
