--- a/src/components/resume/Projects.astro
+++ b/src/components/resume/Projects.astro
@@ -5,13 +5,13 @@ import { projects } from "@cv";
 ---
 
 <Section title="Proyectos">
-  <ul>
+  <ul class="projects-items">
     {
       projects.map(
         ({ url, description, highlights, name, isActive, github }) => {
           return (
-            <li>
-              <article>
+            <li class="items">
+              <article class="item">
                 <header>
                   <h3>
                     <a
@@ -52,77 +52,69 @@ import { projects } from "@cv";
 </Section>
 
 <style>
-  ul {
+  .projects-items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
-    margin-inline: -16px;
-    margin-bottom: 1rem;
+    margin-inline: -8px;
   }
 
-  article {
-    border-radius: 8px;
-    border: 1px solid #f2f2f2;
-    gap: 1rem;
+  .items {
+    overflow: hidden;
+    border: 1px solid rgb(22, 20, 20, 0.1);
+    border-radius: 10px;
+    padding: 8px;
+  }
+
+  .item {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    justify-content: space-between;
+    gap: 0.5rem;
     height: 100%;
   }
 
-  article header {
-    flex: 1;
-  }
-
-  article h3 {
-    margin-bottom: 4px;
+  .item header h3 {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 4px;
   }
 
-  article h3 span {
-    color: rgb(0, 188, 47);
-    font-weight: 900;
-    font-size: 1rem !important;
-  }
-
-  article a {
+  .item header h3 a {
     font-size: 14px;
-    font-weight: 600;
-    color: #111;
+    font-weight: 500;
+    letter-spacing: -0.05rem;
+    color: rgb(22, 20, 20, 0.9);
+    text-wrap: pretty;
   }
 
-  article a:hover {
+  .item header h3 a:hover {
     text-decoration: underline;
   }
 
-  article p {
-    font-size: .75rem;
-    line-height: 1.1rem;
-    margin-bottom: .25rem;
+  .item header h3 span {
+    color: rgb(0, 188, 47, 1);
   }
 
-  footer {
+  .item header p {
+    font-size: 12px;
+    line-height: 1.4;
+    color: rgb(22, 20, 20, 0.65);
+    text-wrap: pretty;
+  }
+
+  .item footer ul {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.25rem;
-    font-size: 0.6rem;
+    gap: 4px;
   }
 
-  footer ul {
-    display: flex;
-    flex-wrap: wrap;
-    padding: .5rem;
-  }
-
-  footer span {
+  .item footer ul span {
+    font-size: 10px;
+    color: rgb(22, 20, 20, 0.5);
+    background: rgb(22, 20, 20, 0.08);
+    padding: 1px 3px;
     border-radius: 4px;
-    background: #eee;
-    color: #444;
-    font-size: .625rem;
-    font-weight: 300;
-    padding: 0.1875rem 0.5625rem;
     width: fit-content;
   }
 
@@ -131,13 +123,13 @@ import { projects } from "@cv";
   }
 
   @media (width <= 700px) {
-    ul {
+    .projects-items {
       margin-inline: 0px;
+      box-shadow: 0 1px 1px rgb(242, 242, 242, 0.35);
     }
 
-    article {
+    .item {
       border: none;
-      box-shadow: 0 1px 1px #f2f2f2;
       padding: 0 0 16px 0;
     }
   }
