--- a/src/components/sections/BlogPost.astro
+++ b/src/components/sections/BlogPost.astro
@@ -7,16 +7,18 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 ---
 
 <Section>
-  <h2>Blog & Notas</h2>
-  <article>
+  <h2 class="section-title">Blog & Notas</h2>
+
+  <article class="suscribe-container">
     <p>
       Escribo sobre cualquier cosa relacionada con la tecnología, el marketing y
       de vez en cuando sobre cosas interesantes que se cruzan en mí camino.
     </p>
+
     <div class="box-left">
       <a href="#" class="rss-btn">
-        <Rss class="w-3 h-3" />
-        Suscríbete
+        <Rss class="h-3 w-3" />
+        <!-- <span>Suscríbete</span> -->
       </a>
     </div>
   </article>
@@ -25,7 +27,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     {
       allPosts.map((post) => (
         <li>
-          <a href={post.url} >
+          <a href={post.url}>
             <Filetextfill />
             <h3>{post.frontmatter.title}</h3>
           </a>
@@ -37,63 +39,25 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 </Section>
 
 <style>
-  h2 {
-    margin-bottom: 1.5rem;
-    font-weight: 800;
-    line-height: 1.5;
-    font-size: 20px;
-    text-transform: uppercase;
-    background-color: #1e252c;
-    color: #f8fafb;
-    width: fit-content;
-    padding: 1px 32px 1px 16px;
-  }
-
-  article {
-    border: 1px solid rgba(30, 37, 44, 10%);
-    padding: 1rem;
-  }
-  article p {
-    font-size: 0.75rem;
-    text-wrap: pretty;
-    font-weight: 300;
-    color: rgba(30, 37, 44, 80%);
-  }
-
-  .box-left {
-    display: flex;
-    gap: 0.25rem;
-    justify-content: end;
-    font-size: 0.625rem;
-  }
-  .rss-btn {
-    display: flex;
-    align-items: center;
-    gap: 0.25rem;
-    padding: 4px;
-    background: rgba(30, 37, 44, 8%);
-    color: rgba(30, 37, 44, 60%);
-  }
-
   ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; 
-    gap: 0 4px;
+    justify-content: center;
+    gap: 0 8px;
     margin-top: 2rem;
-    padding: .5rem;
+    padding: 1rem;
   }
 
   li {
     width: 300px;
     height: 76px;
-    border-top: 3px solid rgba(30, 37, 44, 80%);
+    border-top: 3px solid rgb(22, 20, 20, 1);
     padding: 4px 8px;
-    transition: all .3s ease;
+    transition: all 0.2s ease-in-out;
   }
-  
+
   li:hover {
-    background-color: rgba(30, 37, 44, 20%);
+    background-color: var(--clr-yellow);
   }
 
   li a {
@@ -113,7 +77,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
   li p {
     font-size: 12px;
     text-wrap: pretty;
-    color: rgba(30, 37, 44, 60%);
+    color: rgb(22, 20, 20, 0.65);
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -129,5 +93,4 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
       height: 66px;
     } */
   }
-
 </style>
