--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -10,7 +10,7 @@ import {
   React,
   Javascript,
   Python,
-  Vite
+  Vite,
 } from "simple-icons-astro";
 import Circle from "@/icons/circle.astro";
 import AstroIcon from "@/icons/AstroIcon.astro";
@@ -21,27 +21,29 @@ const SKILL_ICONS: Record<string, any> = {
   React,
   Javascript,
   AstroIcon,
-  Vite
+  Vite,
 };
 ---
 
 <Section>
-  <h2>Proyectos</h2>
-  <article class="text-description">
+  <h2 class="section-title">Proyectos</h2>
+
+  <article class="suscribe-container">
     <p>
       Los pequeños detalles marcan una gran diferencia. Con los años he
       aprendido a fijarme en esos detalles. Nunca dejo de aprender. He aquí
       varias recopilaciones a lo largo de este camino.
     </p>
+
     <div class="box-left">
       <a href="#" class="rss-btn">
-        <Rss class="w-3 h-3" />
-        Suscríbete
+        <Rss class="h-3 w-3" />
+        <!-- <span>Suscríbete</span> -->
       </a>
     </div>
   </article>
 
-  <article class="projects-item">
+  <article class="projects-container">
     <header>
       <h3>
         Con HTML, CSS y JS
@@ -50,19 +52,20 @@ const SKILL_ICONS: Record<string, any> = {
         <span class="text-yellow-500"><Circle /></span>
       </h3>
       <p>
-        Presento alguno de mis proyectos destacados y el enfoque que tomé en
-        cada uno de ellos.
+        Presento alguno de mis proyectos destacados enfocados en el uso de HTML
+        semantico, reglas CSS y funcionalidades en Javascript.
       </p>
     </header>
 
-    <ul class="project-container">
+    <ul class="projects-items">
       {
         projects.map(
           ({ url, description, highlights, name, isActive, github, skill }) => {
             const Icon = SKILL_ICONS[skill];
+
             return (
               <li>
-                <article class="item-project">
+                <article>
                   {Icon && <Icon class="w-4 h-4" />}
                   <header>
                     <a href={url} target="_blank">
@@ -84,7 +87,7 @@ const SKILL_ICONS: Record<string, any> = {
     </ul>
   </article>
 
-  <article class="projects-item">
+  <article class="projects-container">
     <header>
       <h3>
         Con Frameworks
@@ -98,14 +101,16 @@ const SKILL_ICONS: Record<string, any> = {
         puedo ofrecer.
       </p>
     </header>
-    <ul class="project-container">
+
+    <ul class="projects-items">
       {
         projectsB.map(
           ({ url, description, highlights, name, isActive, github, skill }) => {
             const Icon = SKILL_ICONS[skill];
+
             return (
               <li>
-                <article class="item-project">
+                <article>
                   {Icon && <Icon class="w-4 h-4" />}
                   <header>
                     <a href={url} target="_blank">
@@ -113,7 +118,7 @@ const SKILL_ICONS: Record<string, any> = {
                     </a>
                     {isActive && <span>•</span>}
                     {github && (
-                      <a href={github} target="_blank">
+                      <a href="">
                         <Github class="w-4 h-4" />
                       </a>
                     )}
@@ -129,58 +134,19 @@ const SKILL_ICONS: Record<string, any> = {
 </Section>
 
 <style>
-  h2 {
-    margin-bottom: 1.5rem;
-    font-weight: 800;
-    line-height: 1.5;
-    font-size: 20px;
-    text-transform: uppercase;
-    background-color: #1e252c;
-    color: #f8fafb;
-    width: fit-content;
-    padding: 1px 32px 1px 16px;
-  }
+  .projects-container {
+    border: 1px solid rgb(22, 20, 20, 0.08);
+    background-color: rgb(22, 20, 20, 0.03);
+    border-radius: 8px;
+    padding: 16px;
 
-  .text-description {
-    border: 1px solid rgba(30, 37, 44, 10%);
-    padding: 1rem;
-    margin-bottom: 24px;
-  }
-
-  .text-description p {
-    font-size: 12px;
-    text-wrap: pretty;
-    font-weight: 300;
-    color: rgba(30, 37, 44, 80%);
-  }
-
-  .box-left {
-    display: flex;
-    gap: 0.25rem;
-    justify-content: end;
-    font-size: 10px;
-  }
-
-  .rss-btn {
-    display: flex;
-    align-items: center;
-    gap: 0.25rem;
-    padding: 4px;
-    background: rgba(30, 37, 44, 8%);
-    color: rgba(30, 37, 44, 60%);
-  }
-
-  .projects-item {
-    border: 1px solid rgba(30, 37, 44, 10%);
-    border-radius: 0.5rem;
-    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin-bottom: 24px;
+    margin-bottom: 32px;
   }
 
-  .projects-item header h3 {
+  .projects-container header h3 {
     display: flex;
     align-items: center;
     gap: 4px;
@@ -189,60 +155,57 @@ const SKILL_ICONS: Record<string, any> = {
     text-wrap: pretty;
   }
 
-  .projects-item header p {
+  .projects-container header p {
     font-size: 12px;
-    font-weight: 400;
-    color: rgba(30, 37, 44, 80%);
+    font-style: normal;
+    color: rgb(22, 20, 20, 0.7);
+    text-wrap: balance;
   }
 
-  .project-container {
+  .projects-items {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem;
+    gap: 4px;
     margin-inline: -8px;
   }
 
-  .item-project {
-    border: 1px solid rgba(30, 37, 44, 10%);
+  .projects-items li article {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 4px;
+    border: 1px solid rgb(22, 20, 20, 0.15);
     padding: 2px 4px;
     width: fit-content;
     height: 100%;
 
-    transition: all 0.3s ease;
+    transition: all 0.3s ease-in-out;
   }
 
-  .item-project:hover {
-    background-color: rgba(30, 37, 44, 8%);
+  .projects-items li article:hover {
+    background-color: var(--clr-yellow);
   }
 
-  .item-project header {
+  .projects-items li article header {
     display: flex;
     align-items: center;
-    gap: 0.25rem;
+    gap: 4px;
+    font-size: 12px;
+    color: rgb(22, 20, 20, 0.65);
   }
 
-  .item-project header a {
-    font-size: 0.75rem;
-    color: rgba(30, 37, 44, 65%);
-  }
-
-  .item-project header a:hover {
+  .projects-items li article header a:hover {
     text-decoration: underline;
   }
 
-  .item-project header span {
-    color: rgb(0, 188, 47);
-    font-size: 2rem;
-    line-height: 0.85;
+  .projects-items li article header span {
+    color: rgb(0, 188, 47, 1);
+    font-size: 1rem;
   }
 
   @media (width <= 700px) {
-    .project-container {
-      margin-inline: 0px;
-      margin-top: 2rem;
+    .projects-items {
+      margin-inline: 0;
+      margin-top: 1rem;
     }
   }
 </style>
