--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import MinNav from "@/components/sections/MinNav.astro";
-import Footer from "@/components/sections/Footer.astro";
 import Section from "@/components/Section.astro";
+import MinNav from "@/components/sections/NavbarMin.astro";
+import Footer from "@/components/sections/Footer.astro";
 
 import { Github, Rss } from "simple-icons-astro";
 
@@ -11,271 +11,156 @@ const { name, label } = basics;
 ---
 
 <Layout title=`Proyectos de ${name} - ${label}`>
+  <MinNav />
   <Section>
-    <MinNav />
-    <main>
-      <h2 class="title-section">
-        Bodega de Scripts
-        <span>Front-end | Back-end </span>
-      </h2>
+    <h2 class="section-title flex flex-wrap items-center">
+      Proyectos<span class="ml-1 font-light text-sm tracking-tighter"
+        >HTML-CSS-JS | Frameworks | Backend
+      </span>
+    </h2>
 
-      <article class="text-description">
-        <p>
-          Los pequeños detalles marcan una gran diferencia. Con los años he
-          aprendido a fijarme en esos detalles. Nunca dejo de aprender. He aquí
-          varias recopilaciones a lo largo de este camino.
-        </p>
-        <div class="box-left">
-          <a href="#" class="rss-btn">
-            <Rss class="w-3 h-3" />
-            Suscríbete
-          </a>
-        </div>
-      </article>
+    <article class="suscribe-container">
+      <p>
+        Los pequeños detalles marcan una gran diferencia. Con los años he
+        aprendido a fijarme en esos detalles. Nunca dejo de aprender. He aquí
+        varias recopilaciones a lo largo de este camino.
+      </p>
 
-      <ul class="prj-container">
-        {
-          projects.map(
-            ({ url, description, highlights, name, isActive, github }) => {
-              return (
-                <li class="items">
-                  <article class="item" transition:animate="slide">
-                    <header>
-                      <h3>
+      <div class="box-left">
+        <a href="#" class="rss-btn">
+          <Rss class="h-3 w-3" />
+          <!-- <span>Suscríbete</span> -->
+        </a>
+      </div>
+    </article>
+
+    <ul class="projects-items">
+      {
+        projects.map(
+          ({ url, description, highlights, name, isActive, github }) => {
+            return (
+              <li class="items">
+                <article class="item">
+                  <header>
+                    <h3 class="">
+                      <a
+                        href={url}
+                        title={`Ver el proyecto ${name}`}
+                        target="_blank"
+                      >
+                        {name}
+                      </a>
+                      {isActive && <span>•</span>}
+                      {github && (
                         <a
-                          href={url}
-                          title={`Ver el proyecto ${name}`}
+                          class="github-code-link"
+                          href={github}
                           target="_blank"
+                          title={`Ver código fuente del proyecto ${name}`}
                         >
-                          {name}
+                          <Github class="w-4 h-4" />
                         </a>
-                        {isActive && <span>•</span>}
-                        {github && (
-                          <a
-                            class="github-code-link"
-                            href={github}
-                            target="_blank"
-                            title={`Ver código fuente del proyecto ${name}`}
-                          >
-                            <Github class="w-4 h-4" />
-                          </a>
-                        )}
-                      </h3>
-                      <p>{description}</p>
-                    </header>
-                    <footer>
-                      <ul>
-                        {highlights.map((highlight) => {
-                          return <span>{highlight}</span>;
-                        })}
-                      </ul>
-                    </footer>
-                  </article>
-                </li>
-              );
-            }
-          )
-        }
-      </ul>
-      
-      <Footer />
-    </main>
+                      )}
+                    </h3>
+                    <p class=" line-clamp-2">{description}</p>
+                  </header>
+                  <footer>
+                    <ul>
+                      {highlights.map((highlight) => {
+                        return <span>{highlight}</span>;
+                      })}
+                    </ul>
+                  </footer>
+                </article>
+              </li>
+            );
+          }
+        )
+      }
+    </ul>
   </Section>
+  <Footer />
 </Layout>
 
 <style>
-  main {
-    padding: 0rem 0rem 2rem;
-    margin: auto;
-    width: 100%;
-  }
-
-  .title-section {
-    margin-bottom: 1.5rem;
-    font-weight: 900;
-    line-height: 1.5;
-    letter-spacing: -0.025em;
-    font-size: 24px;
-    text-transform: uppercase;
-    background-color: #1e252c;
-    color: #f8fafb;
-    width: fit-content;
-    padding: 1px 32px 1px 16px;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  .title-section span {
-    font-size: 1rem;
-    font-weight: 100;
-    letter-spacing: 0.05em;
-  }
-
-  .title-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .title-header {
-    text-wrap: pretty;
-  }
-  .title-header p {
-    font-size: 1rem;
-    line-height: 0.7;
-    color: rgba(30, 37, 44, 60%);
-  }
-  .title-black {
-    font-weight: 900;
-    font-size: 3.5rem;
-    letter-spacing: -0.125rem;
-  }
-
-  .title-footer img {
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
-    width: 215px;
-  }
-  .text-description {
-    border: 1px solid rgba(30, 37, 44, 10%);
-    padding: 1rem;
-    margin-bottom: 24px;
-  }
-
-  .text-description p {
-    font-size: 0.75rem;
-    text-wrap: pretty;
-    font-weight: 300;
-    color: rgba(30, 37, 44, 80%);
-  }
-
-  .box-left {
-    display: flex;
-    gap: 0.25rem;
-    justify-content: end;
-    font-size: 0.625rem;
-  }
-
-  .rss-btn {
-    display: flex;
-    align-items: center;
-    gap: 0.25rem;
-    padding: 4px;
-    background: rgba(30, 37, 44, 8%);
-    color: rgba(30, 37, 44, 60%);
-  }
-
-  .prj-container {
+  .projects-items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 0.5rem;
-    margin-bottom: 4.5rem;
+    border: 1px solid rgb(22, 20, 20, 0.05);
+    background-color: rgb(22, 20, 20, 0.015);
+    border-radius: 10px;
+    padding: 8px;
+  }
+
+  .items {
+    overflow: hidden;
+    background: white;
+    border: 1px solid rgb(22, 20, 20, 0.1);
+    border-radius: 10px;
+    padding: 0.5rem;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .items:hover {
+    background: rgb(255, 193, 52, 0.85);
   }
 
   .item {
-    border: 1px solid rgba(30, 37, 44, 10%);
-    border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
-    padding: 1rem;
+    justify-content: space-between;
+    gap: 0.5rem;
     height: 100%;
   }
 
-  .item header {
-    flex: 1;
-  }
-
-  .item h3 {
-    /* margin-bottom: 4px; */
+  .item header h3 {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 4px;
   }
 
-  .item h3 span {
-    color: rgb(0, 188, 47);
+  .item header h3 a {
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: -0.05rem;
+    color: rgb(22, 20, 20, 0.9);
+    text-wrap: pretty;
   }
 
-  .item a {
-    font-size: 16px;
-    font-weight: 600;
-    color: rgba(30, 37, 44, 90%);
-  }
-
-  .item a:hover {
+  .item header h3 a:hover {
     text-decoration: underline;
   }
 
-  .item p {
-    font-size: 12px;
-    line-height: 1.2;
+  .item header h3 span {
+    color: rgb(0, 188, 47, 1);
   }
 
-  .item footer {
-    /* display: flex;
-    flex-wrap: wrap;
-    gap: 0.25rem; */
-    padding: -4px;
+  .item header p {
+    font-size: 12px;
+    line-height: 1.4;
+    color: rgb(22, 20, 20, 0.65);
+    text-wrap: pretty;
   }
 
   .item footer ul {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.25rem;
+    gap: 4px;
   }
 
-  .item footer span {
-    border-radius: 4px;
-    background: #eee;
-    color: rgba(30, 37, 44, 80%);
+  .item footer ul span {
     font-size: 10px;
-    padding: 2px 4px;
+    color: rgb(22, 20, 20, 0.5);
+    background: rgb(22, 20, 20, 0.08);
+    padding: 1px 3px;
+    border-radius: 4px;
     width: fit-content;
   }
 
   .github-code-link {
-    margin-left: 0.3125rem;
+    color: rgb(22, 20, 20, 0.55);
+    margin-left: 8px;
   }
-
-  @media (width <= 700px) {
-    main {
-      padding: 2rem;
-    }
-    .title-section {
-      flex-wrap: wrap;
-      line-height: 0.9;
-      padding: 4px 32px 4px 16px;
-      letter-spacing: -.0825rem;
-    }
-    .title-section span {
-      letter-spacing: 0.015em;
-      text-wrap: pretty;
-      line-height: 1;
-      font-size: 12px;
-    }
-
-    .title-container {
-      flex-direction: column-reverse;
-      text-align: center;
-      margin-bottom: 72px;
-    }
-    .title-black {
-      font-size: 36px;
-    }
-    .title-header p {
-      line-height: 1;
-      font-size: 14px;
-    }
-    .prj-container {
-      margin-inline: 0px;
-    }
-
-    .item {
-      border: none;
-      box-shadow: 0 1px 1px #f2f2f2;
-      padding: 0 0 16px 0;
-    }
-  }
+  
 </style>
